# BrochAgent

./: .gitignore  README.md  brochure_generator.py  config.py  link_analyzer.py  main.py  prompts.py  pyproject.toml
notebooks/: code_prep.ipynb
utils/: scraper.py
