[project]
name = "brochure-ai"
version = "0.1.0"
description = "An AI-powered tool that automatically analyzes company websites and generates professional brochures"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "openai>=1.109.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "requests-html>=0.10.0",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.30.1",
    "jupyter>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

